# web_scraping_anbima_susep

./: README.MD  pyproject.toml
src/: BusinessDays.py  apis.py
