[tool.poetry]
name = "web-scraping-anbima-susep"
version = "0.1.0"
description = "Download the parameters from Anbima and Susep to generate the yield curve projection"
authors = ["Matheus <mmont9594@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
bizdays = "^1.0.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
